--- a/client/popup.html
+++ b/client/popup.html
@@ -119,7 +119,10 @@ h1 {
   color: #dd5;
 }
 </style>
+    <script language="JavaScript" type="text/javascript"
+	src="jquery-3.1.0.min.js"></script>
     <script src="popup.js"></script>
+    <script src="clickable.js"></script>
   </head>
   <body>
 	<table id="main">
