Added button to clear storage and remove table
Close #8.

--- a/client/popup.html
+++ b/client/popup.html
@@ -127,8 +127,11 @@ h1 {
 	src="jquery-3.1.0.min.js"></script>
     <script src="popup.js"></script>
     <script src="clickable.js"></script>
+    <script src="clear.js"></script>
+
   </head>
   <body>
+  <button id="clearStorageButton">Clear</button>
 	<table id="main">
 	</table>
   </body>
