Added support to print text under saved timestamp
Text is received from the server and then printed under the
td element of the table in a paragraph element. Currently the
body section is expanded for better visibiltiy of the notes.

Also changed the title TH element to have the full title instead
of the first 10chars.

--- a/client/popup.html
+++ b/client/popup.html
@@ -57,10 +57,17 @@ body {
   text-rendering: optimizeLegibility;
   color: #444;
   background: #eee;
+  width: 500px
 }
 
+<?-HACKS->
 th {
   white-space: nowrap;
+}
+
+<?-HACKS->
+p {
+width: 500px;
 }
 
 h1 {
