RF+Remove javascript from html
Refactor javascript and removed void function from the html
code that was causing an error.

--- a/client/diary.html
+++ b/client/diary.html
@@ -54,7 +54,7 @@ body {
 <body>
 
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" id="navButtonClose" class="closebtn" >&times;</a>
+  <a href="#" id="navButtonClose" class="closebtn" >&times;</a>
   <a href="#" style="font-size:20px">Astro Teller: Celebrating Failure Fuels Moonshots [Entire Talk]
 </a>
   <a href="#" style="font-size:20px">Bernard Roth: Reframing Problems and Getting Honest [Entire Talk]
