Populate diary with video titles
Filled the html diary sidebar with the titles of the
videos by appending <a> elements to the sideBar
parent.

--- a/client/diary.html
+++ b/client/diary.html
@@ -48,19 +48,19 @@ body {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+.sidelinks a {
+font-size:20px;
+}
 </style>
 
 <script src="diary.js"></script>
 <body>
 
 <div id="mySidenav" class="sidenav">
-  <a href="#" id="navButtonClose" class="closebtn" >&times;</a>
-  <a href="#" style="font-size:20px">Astro Teller: Celebrating Failure Fuels Moonshots [Entire Talk]
-</a>
-  <a href="#" style="font-size:20px">Bernard Roth: Reframing Problems and Getting Honest [Entire Talk]
-</a>
-  <a href="#" style="font-size:20px">Bernard Roth: Reframing Problems and Getting Honest [Entire Talk]
-</a>
+<a href="#" id="navButtonClose" class="closebtn" >&times;</a>
+<div id="sideBarContent" class="sidelinks">
+</div>
 </div>
 
 <div id="main">
