--- a/client/diary.html
+++ b/client/diary.html
@@ -52,6 +52,12 @@ body {
 .sidelinks a {
 font-size:20px;
 }
+
+.mainnav p {
+font-family: "Lato", sans-serif;
+font-weight: 400;
+font-size:20px;
+}
 </style>
 
 <script src="diary.js"></script>
@@ -63,8 +69,8 @@ font-size:20px;
 </div>
 </div>
 
-<div id="main">
-  <span id="navButtonOpen" style="font-size:30px;cursor:pointer">&#9776; Open</span>
+<div id="main" class="mainnav">
+<span id="navButtonOpen" style="font-size:30px;cursor:pointer">&#9776; Open</span>
 </body>
 </html>
 
