Fixed table alignment in popup + removed extra css

--- a/client/popup.html
+++ b/client/popup.html
@@ -4,52 +4,6 @@
     <title>Set Page Color Popup</title>
     <style>
 @import "https://fonts.googleapis.com/css?family=Montserrat:300,400,700";
-.rwd-table {
-  margin: 1em 0;
-  min-width: 300px;
-}
-.rwd-table tr {
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-}
-.rwd-table th {
-  display: none;
-}
-.rwd-table td {
-  display: block;
-}
-.rwd-table td:first-child {
-  padding-top: .5em;
-}
-.rwd-table td:last-child {
-  padding-bottom: .5em;
-}
-.rwd-table td:before {
-  content: attr(data-th) ": ";
-  font-weight: bold;
-  width: 6.5em;
-  display: inline-block;
-}
-@media (min-width: 480px) {
-  .rwd-table td:before {
-    display: none;
-  }
-}
-.rwd-table th, .rwd-table td {
-  text-align: left;
-}
-@media (min-width: 480px) {
-  .rwd-table th, .rwd-table td {
-    display: table-cell;
-    padding: .25em .5em;
-  }
-  .rwd-table th:first-child, .rwd-table td:first-child {
-    padding-left: 0;
-  }
-  .rwd-table th:last-child, .rwd-table td:last-child {
-    padding-right: 0;
-  }
-}
 body {
   padding: 0 2em;
   font-family: Montserrat, sans-serif;
@@ -109,26 +63,20 @@ h1 {
       border: 1px solid yellow;
       color: yellow;
     }
-.rwd-table {
-  background: #34495E;
-  color: #fff;
-  border-radius: .4em;
-  overflow: hidden;
-}
-.rwd-table tr {
-  border-color: #46637f;
-}
-.rwd-table th, .rwd-table td {
-  margin: .5em 1em;
-}
-@media (min-width: 480px) {
-  .rwd-table th, .rwd-table td {
-    padding: 1em !important;
-  }
-}
-.rwd-table th, .rwd-table td:before {
-  color: #dd5;
-}
+    td {
+	      width: 200px;
+		  height: 100%;
+    }
+    td p {
+	      display: inline-block;
+	        height:90%;
+		  width:100%;
+    }
+    td a:hover {
+	      background-color: yellow;
+    }
+
+
 </style>
     <script language="JavaScript" type="text/javascript"
 	src="jquery-3.1.0.min.js"></script>
