--- a/client/popup.html
+++ b/client/popup.html
@@ -23,6 +23,15 @@ p {
 width: 500px;
 }
 
+.popup {
+  width: 300px;
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
 h1 {
   font-weight: normal;
   letter-spacing: -1px;
