Fixed all notes page after new storage scheme
Added all notes button in the popup and linked up the notes with the
new storage scheme.

--- a/client/popup.html
+++ b/client/popup.html
@@ -90,6 +90,7 @@ h1 {
   </head>
   <body>
   <button id="clearStorageButton">Clear</button>
+  <button id="viewAllNotes">All Notes</button>
 	<table id="main">
 	</table>
   </body>
