--- a/client/diary.html
+++ b/client/diary.html
@@ -2,8 +2,19 @@
 <html>
 <style>
 body {
-    font-family: "Lato", sans-serif;
+
+font-family: "Lato", sans-serif;
 }
+.expander {
+    background-image: url( 'https://c1.staticflickr.com/8/7132/7749081576_f256dba668.jpg' );
+    background-size: 50px 50px;
+    height: 54px;  
+    width: 54px;
+
+}
+.hiddenVid{
+       display:none;
+    }
 
 .sidenav {
     height: 100%;
@@ -50,16 +61,18 @@ body {
 }
 
 .sidelinks a {
+font-family: "Lato", sans-serif;
 font-size:20px;
 }
 
 .mainnav p {
-font-family: "Lato", sans-serif;
 font-weight: 400;
 font-size:20px;
 }
 </style>
 
+<script language="JavaScript" type="text/javascript"
+	src="jquery-3.1.0.min.js"></script>
 <script src="diary.js"></script>
 <body>
 
