Confirm window before clear notes + colored button
Colored button for clear and all notes and created a
.confirm message after the user presses the clear button.

--- a/client/popup.html
+++ b/client/popup.html
@@ -78,6 +78,15 @@ h1 {
     td a:hover {
 	      background-color: yellow;
     }
+    button#clearStorageButton{
+        background-color: #580000;
+        color: white;
+    }
+
+    button#viewAllNotes{
+        background-color: #000f58;
+        color: white;
+    }
 
 
 </style>
