Export individual notes as pdf with jspdf
Required two changes.
1. Fixed an issue so that the active tab field in storage is actually the
active tab.
2. When exporting as PDF set the title to be the current video name
and the name of the pdf file as a 10char string of the title.
3. Added a button on popup.js to export pdf

--- a/client/popup.html
+++ b/client/popup.html
@@ -95,11 +95,13 @@ h1 {
     <script src="popup.js"></script>
     <script src="clickable.js"></script>
     <script src="clear.js"></script>
+    <script src="jspdf.min.js"></script>
 
   </head>
   <body>
   <button id="clearStorageButton">Clear</button>
   <button id="viewAllNotes">All Notes</button>
+  <button id="exportPdfButton">Export PDF</button>
 	<table id="main">
 	</table>
   </body>
